# giants-of-old

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data_preparation/: authors.rs  downloads.rs  sourcing.rs
src/setup/: logging.rs  paths.rs
src/sources/: authors.rs  extensions.rs  http.rs  scraping.rs  torrents.rs  utils.rs
