[package]
name = "giants-core-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.8"
glob = "0.3.2"
kdam = "0.6.2"
librqbit = "8.0.0"
log = "0.4.27"
reqwest = "0.12.15"
scraper = "0.23.1"
serde_json = "1.0.140"
struct_iterable = "0.1.1"
tokio = { version = "1.44.1", features = ["full"] }
